parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BITWISE_NOT

Grammar

Rule 0     S' -> program
Rule 1     program -> global main_statement
Rule 2     global -> declaration_statement end global
Rule 3     global -> function_statement global
Rule 4     global -> empty
Rule 5     function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block
Rule 6     params -> params_list
Rule 7     params -> empty
Rule 8     params_list -> declaration_statement
Rule 9     params_list -> params_list COMMA declaration_statement
Rule 10    main_statement -> THE_1 JOURNEY BEGINS HERE block
Rule 11    declaration_statement -> type ID
Rule 12    declaration_statement_list -> declaration_statement
Rule 13    declaration_statement_list -> declaration_statement_list COMMA ID
Rule 14    type -> UNSIGNED
Rule 15    type -> SHORT
Rule 16    type -> INT
Rule 17    type -> LONG
Rule 18    type -> FLOAT
Rule 19    type -> DOUBLE
Rule 20    type -> CHAR
Rule 21    type -> STRING
Rule 22    type -> BOOL
Rule 23    type -> VOID
Rule 24    end -> SEMICOLON
Rule 25    end -> EXCLAMATION
Rule 26    empty -> <empty>
Rule 27    block -> OPEN_BRACE statements_list CLOSE_BRACE
Rule 28    statements_list -> statements_list statements
Rule 29    statements_list -> empty
Rule 30    statements -> declaration_statement_list end
Rule 31    statements -> while_statement
Rule 32    statements -> continue_statement end
Rule 33    statements -> break_statement end
Rule 34    statements -> if_else_statement
Rule 35    statements -> return_statement end
Rule 36    statements -> assign_statement end
Rule 37    while_statement -> WHILE OPEN_PARENTHESIS comparasion_list CLOSE_PARENTHESIS block
Rule 38    continue_statement -> THE_1 QUEST CONTINUES
Rule 39    break_statement -> YOU SHALL NOT PASS
Rule 40    if_else_statement -> if_statement elif_statement else_statement
Rule 41    if_statement -> IF OPEN_PARENTHESIS comparasion_list CLOSE_PARENTHESIS block
Rule 42    else_statement -> ELSE block
Rule 43    else_statement -> empty
Rule 44    elif_statement -> elif_statement HOWEVER WHEN OPEN_PARENTHESIS comparasion_list CLOSE_PARENTHESIS block
Rule 45    elif_statement -> empty
Rule 46    return_statement -> GO BACK TO THE_2 ABYSS
Rule 47    return_statement -> GO BACK TO THE_2 ABYSS expression
Rule 48    comparasion_list -> comparasion
Rule 49    comparasion_list -> comparasion_list logic_operator comparasion
Rule 50    comparasion -> expression
Rule 51    comparasion -> expression value_operators expression
Rule 52    value_operators -> EQUAL
Rule 53    value_operators -> LESS
Rule 54    value_operators -> LESS_EQUAL
Rule 55    value_operators -> GREATER
Rule 56    value_operators -> GREATER_EQUAL
Rule 57    logic_operator -> AND
Rule 58    logic_operator -> OR
Rule 59    logic_operator -> XOR
Rule 60    literal -> INT_LITERAL
Rule 61    literal -> FLOAT_LITERAL
Rule 62    literal -> CHAR_LITERAL
Rule 63    literal -> STRING_LITERAL
Rule 64    literal -> BOOL_FALSE
Rule 65    literal -> BOOL_TRUE
Rule 66    assign_statement -> ID ASSIGN call_function
Rule 67    assign_statement -> ID ASSIGN expression
Rule 68    call_function -> ID OPEN_PARENTHESIS args CLOSE_PARENTHESIS
Rule 69    args -> args_list
Rule 70    args -> empty
Rule 71    args_list -> expression
Rule 72    args_list -> args_list COMMA expression
Rule 73    expression -> expression ADD values
Rule 74    expression -> expression SUB values
Rule 75    expression -> expression DIV values
Rule 76    expression -> expression MULT values
Rule 77    expression -> expression MOD values
Rule 78    expression -> expression POW values
Rule 79    expression -> expression BITWISE_OR values
Rule 80    expression -> expression BITWISE_AND values
Rule 81    expression -> expression BITWISE_XOR values
Rule 82    expression -> OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
Rule 83    expression -> values
Rule 84    values -> literal
Rule 85    values -> ID

Terminals, with rules where they appear

ABYSS                : 46 47
ADD                  : 73
AND                  : 57
ASSIGN               : 66 67
BACK                 : 46 47
BEGINS               : 10
BITWISE_AND          : 80
BITWISE_NOT          : 
BITWISE_OR           : 79
BITWISE_XOR          : 81
BOOL                 : 22
BOOL_FALSE           : 64
BOOL_TRUE            : 65
CHAR                 : 20
CHAR_LITERAL         : 62
CLOSE_BRACE          : 27
CLOSE_PARENTHESIS    : 5 37 41 44 68 82
COMMA                : 9 13 72
CONTINUES            : 38
DIV                  : 75
DOUBLE               : 19
ELSE                 : 42
EQUAL                : 52
EXCLAMATION          : 25
FLOAT                : 18
FLOAT_LITERAL        : 61
FUNCTION             : 5
GO                   : 46 47
GREATER              : 55
GREATER_EQUAL        : 56
HERE                 : 10
HOWEVER              : 44
ID                   : 5 11 13 66 67 68 85
IF                   : 41
INT                  : 16
INT_LITERAL          : 60
JOURNEY              : 10
LESS                 : 53
LESS_EQUAL           : 54
LONG                 : 17
MOD                  : 77
MULT                 : 76
NOT                  : 39
OPEN_BRACE           : 27
OPEN_PARENTHESIS     : 5 37 41 44 68 82
OR                   : 58
PASS                 : 39
POW                  : 78
QUEST                : 38
SEMICOLON            : 24
SHALL                : 39
SHORT                : 15
STRING               : 21
STRING_LITERAL       : 63
SUB                  : 74
THE_1                : 10 38
THE_2                : 46 47
TO                   : 46 47
UNSIGNED             : 14
VOID                 : 23
WHEN                 : 44
WHILE                : 37
XOR                  : 59
YOU                  : 39
error                : 

Nonterminals, with rules where they appear

args                 : 68
args_list            : 69 72
assign_statement     : 36
block                : 5 10 37 41 42 44
break_statement      : 33
call_function        : 66
comparasion          : 48 49
comparasion_list     : 37 41 44 49
continue_statement   : 32
declaration_statement : 2 8 9 12
declaration_statement_list : 13 30
elif_statement       : 40 44
else_statement       : 40
empty                : 4 7 29 43 45 70
end                  : 2 30 32 33 35 36
expression           : 47 50 51 51 67 71 72 73 74 75 76 77 78 79 80 81 82
function_statement   : 3
global               : 1 2 3
if_else_statement    : 34
if_statement         : 40
literal              : 84
logic_operator       : 49
main_statement       : 1
params               : 5
params_list          : 6 9
program              : 0
return_statement     : 35
statements           : 28
statements_list      : 27 28
type                 : 5 11
value_operators      : 51
values               : 73 74 75 76 77 78 79 80 81 83
while_statement      : 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global main_statement
    (2) global -> . declaration_statement end global
    (3) global -> . function_statement global
    (4) global -> . empty
    (11) declaration_statement -> . type ID
    (5) function_statement -> . FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block
    (26) empty -> .
    (14) type -> . UNSIGNED
    (15) type -> . SHORT
    (16) type -> . INT
    (17) type -> . LONG
    (18) type -> . FLOAT
    (19) type -> . DOUBLE
    (20) type -> . CHAR
    (21) type -> . STRING
    (22) type -> . BOOL
    (23) type -> . VOID

    FUNCTION        shift and go to state 7
    THE_1           reduce using rule 26 (empty -> .)
    UNSIGNED        shift and go to state 8
    SHORT           shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    STRING          shift and go to state 15
    BOOL            shift and go to state 16
    VOID            shift and go to state 17

    program                        shift and go to state 1
    global                         shift and go to state 2
    declaration_statement          shift and go to state 3
    function_statement             shift and go to state 4
    empty                          shift and go to state 5
    type                           shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> global . main_statement
    (10) main_statement -> . THE_1 JOURNEY BEGINS HERE block

    THE_1           shift and go to state 19

    main_statement                 shift and go to state 18

state 3

    (2) global -> declaration_statement . end global
    (24) end -> . SEMICOLON
    (25) end -> . EXCLAMATION

    SEMICOLON       shift and go to state 21
    EXCLAMATION     shift and go to state 22

    end                            shift and go to state 20

state 4

    (3) global -> function_statement . global
    (2) global -> . declaration_statement end global
    (3) global -> . function_statement global
    (4) global -> . empty
    (11) declaration_statement -> . type ID
    (5) function_statement -> . FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block
    (26) empty -> .
    (14) type -> . UNSIGNED
    (15) type -> . SHORT
    (16) type -> . INT
    (17) type -> . LONG
    (18) type -> . FLOAT
    (19) type -> . DOUBLE
    (20) type -> . CHAR
    (21) type -> . STRING
    (22) type -> . BOOL
    (23) type -> . VOID

    FUNCTION        shift and go to state 7
    THE_1           reduce using rule 26 (empty -> .)
    UNSIGNED        shift and go to state 8
    SHORT           shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    STRING          shift and go to state 15
    BOOL            shift and go to state 16
    VOID            shift and go to state 17

    function_statement             shift and go to state 4
    global                         shift and go to state 23
    declaration_statement          shift and go to state 3
    empty                          shift and go to state 5
    type                           shift and go to state 6

state 5

    (4) global -> empty .

    THE_1           reduce using rule 4 (global -> empty .)


state 6

    (11) declaration_statement -> type . ID

    ID              shift and go to state 24


state 7

    (5) function_statement -> FUNCTION . type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block
    (14) type -> . UNSIGNED
    (15) type -> . SHORT
    (16) type -> . INT
    (17) type -> . LONG
    (18) type -> . FLOAT
    (19) type -> . DOUBLE
    (20) type -> . CHAR
    (21) type -> . STRING
    (22) type -> . BOOL
    (23) type -> . VOID

    UNSIGNED        shift and go to state 8
    SHORT           shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    STRING          shift and go to state 15
    BOOL            shift and go to state 16
    VOID            shift and go to state 17

    type                           shift and go to state 25

state 8

    (14) type -> UNSIGNED .

    ID              reduce using rule 14 (type -> UNSIGNED .)


state 9

    (15) type -> SHORT .

    ID              reduce using rule 15 (type -> SHORT .)


state 10

    (16) type -> INT .

    ID              reduce using rule 16 (type -> INT .)


state 11

    (17) type -> LONG .

    ID              reduce using rule 17 (type -> LONG .)


state 12

    (18) type -> FLOAT .

    ID              reduce using rule 18 (type -> FLOAT .)


state 13

    (19) type -> DOUBLE .

    ID              reduce using rule 19 (type -> DOUBLE .)


state 14

    (20) type -> CHAR .

    ID              reduce using rule 20 (type -> CHAR .)


state 15

    (21) type -> STRING .

    ID              reduce using rule 21 (type -> STRING .)


state 16

    (22) type -> BOOL .

    ID              reduce using rule 22 (type -> BOOL .)


state 17

    (23) type -> VOID .

    ID              reduce using rule 23 (type -> VOID .)


state 18

    (1) program -> global main_statement .

    $end            reduce using rule 1 (program -> global main_statement .)


state 19

    (10) main_statement -> THE_1 . JOURNEY BEGINS HERE block

    JOURNEY         shift and go to state 26


state 20

    (2) global -> declaration_statement end . global
    (2) global -> . declaration_statement end global
    (3) global -> . function_statement global
    (4) global -> . empty
    (11) declaration_statement -> . type ID
    (5) function_statement -> . FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block
    (26) empty -> .
    (14) type -> . UNSIGNED
    (15) type -> . SHORT
    (16) type -> . INT
    (17) type -> . LONG
    (18) type -> . FLOAT
    (19) type -> . DOUBLE
    (20) type -> . CHAR
    (21) type -> . STRING
    (22) type -> . BOOL
    (23) type -> . VOID

    FUNCTION        shift and go to state 7
    THE_1           reduce using rule 26 (empty -> .)
    UNSIGNED        shift and go to state 8
    SHORT           shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    STRING          shift and go to state 15
    BOOL            shift and go to state 16
    VOID            shift and go to state 17

    declaration_statement          shift and go to state 3
    global                         shift and go to state 27
    function_statement             shift and go to state 4
    empty                          shift and go to state 5
    type                           shift and go to state 6

state 21

    (24) end -> SEMICOLON .

    FUNCTION        reduce using rule 24 (end -> SEMICOLON .)
    UNSIGNED        reduce using rule 24 (end -> SEMICOLON .)
    SHORT           reduce using rule 24 (end -> SEMICOLON .)
    INT             reduce using rule 24 (end -> SEMICOLON .)
    LONG            reduce using rule 24 (end -> SEMICOLON .)
    FLOAT           reduce using rule 24 (end -> SEMICOLON .)
    DOUBLE          reduce using rule 24 (end -> SEMICOLON .)
    CHAR            reduce using rule 24 (end -> SEMICOLON .)
    STRING          reduce using rule 24 (end -> SEMICOLON .)
    BOOL            reduce using rule 24 (end -> SEMICOLON .)
    VOID            reduce using rule 24 (end -> SEMICOLON .)
    THE_1           reduce using rule 24 (end -> SEMICOLON .)
    CLOSE_BRACE     reduce using rule 24 (end -> SEMICOLON .)
    WHILE           reduce using rule 24 (end -> SEMICOLON .)
    YOU             reduce using rule 24 (end -> SEMICOLON .)
    GO              reduce using rule 24 (end -> SEMICOLON .)
    ID              reduce using rule 24 (end -> SEMICOLON .)
    IF              reduce using rule 24 (end -> SEMICOLON .)


state 22

    (25) end -> EXCLAMATION .

    FUNCTION        reduce using rule 25 (end -> EXCLAMATION .)
    UNSIGNED        reduce using rule 25 (end -> EXCLAMATION .)
    SHORT           reduce using rule 25 (end -> EXCLAMATION .)
    INT             reduce using rule 25 (end -> EXCLAMATION .)
    LONG            reduce using rule 25 (end -> EXCLAMATION .)
    FLOAT           reduce using rule 25 (end -> EXCLAMATION .)
    DOUBLE          reduce using rule 25 (end -> EXCLAMATION .)
    CHAR            reduce using rule 25 (end -> EXCLAMATION .)
    STRING          reduce using rule 25 (end -> EXCLAMATION .)
    BOOL            reduce using rule 25 (end -> EXCLAMATION .)
    VOID            reduce using rule 25 (end -> EXCLAMATION .)
    THE_1           reduce using rule 25 (end -> EXCLAMATION .)
    CLOSE_BRACE     reduce using rule 25 (end -> EXCLAMATION .)
    WHILE           reduce using rule 25 (end -> EXCLAMATION .)
    YOU             reduce using rule 25 (end -> EXCLAMATION .)
    GO              reduce using rule 25 (end -> EXCLAMATION .)
    ID              reduce using rule 25 (end -> EXCLAMATION .)
    IF              reduce using rule 25 (end -> EXCLAMATION .)


state 23

    (3) global -> function_statement global .

    THE_1           reduce using rule 3 (global -> function_statement global .)


state 24

    (11) declaration_statement -> type ID .

    SEMICOLON       reduce using rule 11 (declaration_statement -> type ID .)
    EXCLAMATION     reduce using rule 11 (declaration_statement -> type ID .)
    COMMA           reduce using rule 11 (declaration_statement -> type ID .)
    CLOSE_PARENTHESIS reduce using rule 11 (declaration_statement -> type ID .)


state 25

    (5) function_statement -> FUNCTION type . ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block

    ID              shift and go to state 28


state 26

    (10) main_statement -> THE_1 JOURNEY . BEGINS HERE block

    BEGINS          shift and go to state 29


state 27

    (2) global -> declaration_statement end global .

    THE_1           reduce using rule 2 (global -> declaration_statement end global .)


state 28

    (5) function_statement -> FUNCTION type ID . OPEN_PARENTHESIS params CLOSE_PARENTHESIS block

    OPEN_PARENTHESIS shift and go to state 30


state 29

    (10) main_statement -> THE_1 JOURNEY BEGINS . HERE block

    HERE            shift and go to state 31


state 30

    (5) function_statement -> FUNCTION type ID OPEN_PARENTHESIS . params CLOSE_PARENTHESIS block
    (6) params -> . params_list
    (7) params -> . empty
    (8) params_list -> . declaration_statement
    (9) params_list -> . params_list COMMA declaration_statement
    (26) empty -> .
    (11) declaration_statement -> . type ID
    (14) type -> . UNSIGNED
    (15) type -> . SHORT
    (16) type -> . INT
    (17) type -> . LONG
    (18) type -> . FLOAT
    (19) type -> . DOUBLE
    (20) type -> . CHAR
    (21) type -> . STRING
    (22) type -> . BOOL
    (23) type -> . VOID

    CLOSE_PARENTHESIS reduce using rule 26 (empty -> .)
    UNSIGNED        shift and go to state 8
    SHORT           shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    STRING          shift and go to state 15
    BOOL            shift and go to state 16
    VOID            shift and go to state 17

    type                           shift and go to state 6
    params                         shift and go to state 32
    params_list                    shift and go to state 33
    empty                          shift and go to state 34
    declaration_statement          shift and go to state 35

state 31

    (10) main_statement -> THE_1 JOURNEY BEGINS HERE . block
    (27) block -> . OPEN_BRACE statements_list CLOSE_BRACE

    OPEN_BRACE      shift and go to state 37

    block                          shift and go to state 36

state 32

    (5) function_statement -> FUNCTION type ID OPEN_PARENTHESIS params . CLOSE_PARENTHESIS block

    CLOSE_PARENTHESIS shift and go to state 38


state 33

    (6) params -> params_list .
    (9) params_list -> params_list . COMMA declaration_statement

    CLOSE_PARENTHESIS reduce using rule 6 (params -> params_list .)
    COMMA           shift and go to state 39


state 34

    (7) params -> empty .

    CLOSE_PARENTHESIS reduce using rule 7 (params -> empty .)


state 35

    (8) params_list -> declaration_statement .

    COMMA           reduce using rule 8 (params_list -> declaration_statement .)
    CLOSE_PARENTHESIS reduce using rule 8 (params_list -> declaration_statement .)


state 36

    (10) main_statement -> THE_1 JOURNEY BEGINS HERE block .

    $end            reduce using rule 10 (main_statement -> THE_1 JOURNEY BEGINS HERE block .)


state 37

    (27) block -> OPEN_BRACE . statements_list CLOSE_BRACE
    (28) statements_list -> . statements_list statements
    (29) statements_list -> . empty
    (26) empty -> .

    CLOSE_BRACE     reduce using rule 26 (empty -> .)
    WHILE           reduce using rule 26 (empty -> .)
    THE_1           reduce using rule 26 (empty -> .)
    YOU             reduce using rule 26 (empty -> .)
    GO              reduce using rule 26 (empty -> .)
    ID              reduce using rule 26 (empty -> .)
    IF              reduce using rule 26 (empty -> .)
    UNSIGNED        reduce using rule 26 (empty -> .)
    SHORT           reduce using rule 26 (empty -> .)
    INT             reduce using rule 26 (empty -> .)
    LONG            reduce using rule 26 (empty -> .)
    FLOAT           reduce using rule 26 (empty -> .)
    DOUBLE          reduce using rule 26 (empty -> .)
    CHAR            reduce using rule 26 (empty -> .)
    STRING          reduce using rule 26 (empty -> .)
    BOOL            reduce using rule 26 (empty -> .)
    VOID            reduce using rule 26 (empty -> .)

    statements_list                shift and go to state 40
    empty                          shift and go to state 41

state 38

    (5) function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS . block
    (27) block -> . OPEN_BRACE statements_list CLOSE_BRACE

    OPEN_BRACE      shift and go to state 37

    block                          shift and go to state 42

state 39

    (9) params_list -> params_list COMMA . declaration_statement
    (11) declaration_statement -> . type ID
    (14) type -> . UNSIGNED
    (15) type -> . SHORT
    (16) type -> . INT
    (17) type -> . LONG
    (18) type -> . FLOAT
    (19) type -> . DOUBLE
    (20) type -> . CHAR
    (21) type -> . STRING
    (22) type -> . BOOL
    (23) type -> . VOID

    UNSIGNED        shift and go to state 8
    SHORT           shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    STRING          shift and go to state 15
    BOOL            shift and go to state 16
    VOID            shift and go to state 17

    declaration_statement          shift and go to state 43
    type                           shift and go to state 6

state 40

    (27) block -> OPEN_BRACE statements_list . CLOSE_BRACE
    (28) statements_list -> statements_list . statements
    (30) statements -> . declaration_statement_list end
    (31) statements -> . while_statement
    (32) statements -> . continue_statement end
    (33) statements -> . break_statement end
    (34) statements -> . if_else_statement
    (35) statements -> . return_statement end
    (36) statements -> . assign_statement end
    (12) declaration_statement_list -> . declaration_statement
    (13) declaration_statement_list -> . declaration_statement_list COMMA ID
    (37) while_statement -> . WHILE OPEN_PARENTHESIS comparasion_list CLOSE_PARENTHESIS block
    (38) continue_statement -> . THE_1 QUEST CONTINUES
    (39) break_statement -> . YOU SHALL NOT PASS
    (40) if_else_statement -> . if_statement elif_statement else_statement
    (46) return_statement -> . GO BACK TO THE_2 ABYSS
    (47) return_statement -> . GO BACK TO THE_2 ABYSS expression
    (66) assign_statement -> . ID ASSIGN call_function
    (67) assign_statement -> . ID ASSIGN expression
    (11) declaration_statement -> . type ID
    (41) if_statement -> . IF OPEN_PARENTHESIS comparasion_list CLOSE_PARENTHESIS block
    (14) type -> . UNSIGNED
    (15) type -> . SHORT
    (16) type -> . INT
    (17) type -> . LONG
    (18) type -> . FLOAT
    (19) type -> . DOUBLE
    (20) type -> . CHAR
    (21) type -> . STRING
    (22) type -> . BOOL
    (23) type -> . VOID

    CLOSE_BRACE     shift and go to state 44
    WHILE           shift and go to state 55
    THE_1           shift and go to state 56
    YOU             shift and go to state 57
    GO              shift and go to state 59
    ID              shift and go to state 54
    IF              shift and go to state 60
    UNSIGNED        shift and go to state 8
    SHORT           shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    STRING          shift and go to state 15
    BOOL            shift and go to state 16
    VOID            shift and go to state 17

    statements                     shift and go to state 45
    declaration_statement_list     shift and go to state 46
    while_statement                shift and go to state 47
    continue_statement             shift and go to state 48
    break_statement                shift and go to state 49
    if_else_statement              shift and go to state 50
    return_statement               shift and go to state 51
    assign_statement               shift and go to state 52
    declaration_statement          shift and go to state 53
    if_statement                   shift and go to state 58
    type                           shift and go to state 6

state 41

    (29) statements_list -> empty .

    CLOSE_BRACE     reduce using rule 29 (statements_list -> empty .)
    WHILE           reduce using rule 29 (statements_list -> empty .)
    THE_1           reduce using rule 29 (statements_list -> empty .)
    YOU             reduce using rule 29 (statements_list -> empty .)
    GO              reduce using rule 29 (statements_list -> empty .)
    ID              reduce using rule 29 (statements_list -> empty .)
    IF              reduce using rule 29 (statements_list -> empty .)
    UNSIGNED        reduce using rule 29 (statements_list -> empty .)
    SHORT           reduce using rule 29 (statements_list -> empty .)
    INT             reduce using rule 29 (statements_list -> empty .)
    LONG            reduce using rule 29 (statements_list -> empty .)
    FLOAT           reduce using rule 29 (statements_list -> empty .)
    DOUBLE          reduce using rule 29 (statements_list -> empty .)
    CHAR            reduce using rule 29 (statements_list -> empty .)
    STRING          reduce using rule 29 (statements_list -> empty .)
    BOOL            reduce using rule 29 (statements_list -> empty .)
    VOID            reduce using rule 29 (statements_list -> empty .)


state 42

    (5) function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .

    FUNCTION        reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)
    UNSIGNED        reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)
    SHORT           reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)
    INT             reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)
    LONG            reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)
    FLOAT           reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)
    DOUBLE          reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)
    CHAR            reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)
    STRING          reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)
    BOOL            reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)
    VOID            reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)
    THE_1           reduce using rule 5 (function_statement -> FUNCTION type ID OPEN_PARENTHESIS params CLOSE_PARENTHESIS block .)


state 43

    (9) params_list -> params_list COMMA declaration_statement .

    COMMA           reduce using rule 9 (params_list -> params_list COMMA declaration_statement .)
    CLOSE_PARENTHESIS reduce using rule 9 (params_list -> params_list COMMA declaration_statement .)


state 44

    (27) block -> OPEN_BRACE statements_list CLOSE_BRACE .

    $end            reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    FUNCTION        reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    UNSIGNED        reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    SHORT           reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    INT             reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    LONG            reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    FLOAT           reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    DOUBLE          reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    CHAR            reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    STRING          reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    BOOL            reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    VOID            reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    THE_1           reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    CLOSE_BRACE     reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    WHILE           reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    YOU             reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    GO              reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    ID              reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    IF              reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    HOWEVER         reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)
    ELSE            reduce using rule 27 (block -> OPEN_BRACE statements_list CLOSE_BRACE .)


state 45

    (28) statements_list -> statements_list statements .

    CLOSE_BRACE     reduce using rule 28 (statements_list -> statements_list statements .)
    WHILE           reduce using rule 28 (statements_list -> statements_list statements .)
    THE_1           reduce using rule 28 (statements_list -> statements_list statements .)
    YOU             reduce using rule 28 (statements_list -> statements_list statements .)
    GO              reduce using rule 28 (statements_list -> statements_list statements .)
    ID              reduce using rule 28 (statements_list -> statements_list statements .)
    IF              reduce using rule 28 (statements_list -> statements_list statements .)
    UNSIGNED        reduce using rule 28 (statements_list -> statements_list statements .)
    SHORT           reduce using rule 28 (statements_list -> statements_list statements .)
    INT             reduce using rule 28 (statements_list -> statements_list statements .)
    LONG            reduce using rule 28 (statements_list -> statements_list statements .)
    FLOAT           reduce using rule 28 (statements_list -> statements_list statements .)
    DOUBLE          reduce using rule 28 (statements_list -> statements_list statements .)
    CHAR            reduce using rule 28 (statements_list -> statements_list statements .)
    STRING          reduce using rule 28 (statements_list -> statements_list statements .)
    BOOL            reduce using rule 28 (statements_list -> statements_list statements .)
    VOID            reduce using rule 28 (statements_list -> statements_list statements .)


state 46

    (30) statements -> declaration_statement_list . end
    (13) declaration_statement_list -> declaration_statement_list . COMMA ID
    (24) end -> . SEMICOLON
    (25) end -> . EXCLAMATION

    COMMA           shift and go to state 62
    SEMICOLON       shift and go to state 21
    EXCLAMATION     shift and go to state 22

    end                            shift and go to state 61

state 47

    (31) statements -> while_statement .

    CLOSE_BRACE     reduce using rule 31 (statements -> while_statement .)
    WHILE           reduce using rule 31 (statements -> while_statement .)
    THE_1           reduce using rule 31 (statements -> while_statement .)
    YOU             reduce using rule 31 (statements -> while_statement .)
    GO              reduce using rule 31 (statements -> while_statement .)
    ID              reduce using rule 31 (statements -> while_statement .)
    IF              reduce using rule 31 (statements -> while_statement .)
    UNSIGNED        reduce using rule 31 (statements -> while_statement .)
    SHORT           reduce using rule 31 (statements -> while_statement .)
    INT             reduce using rule 31 (statements -> while_statement .)
    LONG            reduce using rule 31 (statements -> while_statement .)
    FLOAT           reduce using rule 31 (statements -> while_statement .)
    DOUBLE          reduce using rule 31 (statements -> while_statement .)
    CHAR            reduce using rule 31 (statements -> while_statement .)
    STRING          reduce using rule 31 (statements -> while_statement .)
    BOOL            reduce using rule 31 (statements -> while_statement .)
    VOID            reduce using rule 31 (statements -> while_statement .)


state 48

    (32) statements -> continue_statement . end
    (24) end -> . SEMICOLON
    (25) end -> . EXCLAMATION

    SEMICOLON       shift and go to state 21
    EXCLAMATION     shift and go to state 22

    end                            shift and go to state 63

state 49

    (33) statements -> break_statement . end
    (24) end -> . SEMICOLON
    (25) end -> . EXCLAMATION

    SEMICOLON       shift and go to state 21
    EXCLAMATION     shift and go to state 22

    end                            shift and go to state 64

state 50

    (34) statements -> if_else_statement .

    CLOSE_BRACE     reduce using rule 34 (statements -> if_else_statement .)
    WHILE           reduce using rule 34 (statements -> if_else_statement .)
    THE_1           reduce using rule 34 (statements -> if_else_statement .)
    YOU             reduce using rule 34 (statements -> if_else_statement .)
    GO              reduce using rule 34 (statements -> if_else_statement .)
    ID              reduce using rule 34 (statements -> if_else_statement .)
    IF              reduce using rule 34 (statements -> if_else_statement .)
    UNSIGNED        reduce using rule 34 (statements -> if_else_statement .)
    SHORT           reduce using rule 34 (statements -> if_else_statement .)
    INT             reduce using rule 34 (statements -> if_else_statement .)
    LONG            reduce using rule 34 (statements -> if_else_statement .)
    FLOAT           reduce using rule 34 (statements -> if_else_statement .)
    DOUBLE          reduce using rule 34 (statements -> if_else_statement .)
    CHAR            reduce using rule 34 (statements -> if_else_statement .)
    STRING          reduce using rule 34 (statements -> if_else_statement .)
    BOOL            reduce using rule 34 (statements -> if_else_statement .)
    VOID            reduce using rule 34 (statements -> if_else_statement .)


state 51

    (35) statements -> return_statement . end
    (24) end -> . SEMICOLON
    (25) end -> . EXCLAMATION

    SEMICOLON       shift and go to state 21
    EXCLAMATION     shift and go to state 22

    end                            shift and go to state 65

state 52

    (36) statements -> assign_statement . end
    (24) end -> . SEMICOLON
    (25) end -> . EXCLAMATION

    SEMICOLON       shift and go to state 21
    EXCLAMATION     shift and go to state 22

    end                            shift and go to state 66

state 53

    (12) declaration_statement_list -> declaration_statement .
